# FFmpegAudioDecoder

./: CMakeLists.txt  README  test.sh  test_check.sh
data/: in.opu  test.amr  test.m4a
src/: ffmpeg_decoder.h  main.cpp
src/ffmpeg/: ffmpeg_decoder.cpp
src/ffmpeg/demo3/: stream_demo.cpp
src/ffmpeg/feed/: AudioDecoder.cpp  AudioDecoder.h  example.cpp  main.cpp  transcode.cpp  transcode_aac.cpp
src/ffmpeg/feed2/: audio_decoder.cpp  audio_decoder.h  decode_filter_audio.cpp  main.cpp  transcode.cpp  transcode_aac.cpp
src/ffmpeg/feed_thread/: audio_decoder.cpp  audio_decoder.h  audio_decoder_interface.h  main.cpp  opus_decoder.cc  opus_decoder.h  rkcodec.cc  rkcodec.h  timeout_queue.h
src/ffmpeg/stream/: ffmpeg_decoder.cpp  ffmpeg_decoder.h  main.cpp
src/ffmpeg2/: AudioDecoder.cpp  AudioDecoder.h  example.cpp  main.cpp  test.cpp
